# Network

./: CMakeLists.txt  README.md  main.cpp
include/Network/: Socket.hpp  SocketEventManager.hpp
include/Network/Datagram/: Client.hpp  Clinet.hpp  Server.hpp
include/Network/Stream/: Client.hpp  Clinet.hpp  Server.hpp
src/: Socket.cpp  SocketEventManager.cpp  Stream.cpp
src/Datagram/: Client.cpp  Server.cpp
src/Stream/: Client.cpp  Server.cpp
tests/: CMakeLists.txt  SocketTests.cpp
